src/objects/Glxy_LPStepRent__c.object
<CustomObject>
    <description>This table contains the step rent information about lease projects. This is one kind of lease project payment but can have different characteristics.</description>
    <fields>
        <fullName>APR_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APR IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APR_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APR NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AUG_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AUG IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AUG_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AUG NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acceptance620Date__c</fullName>
        <formula>ProjectNumber__r.Acceptance620Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date R620 was generated and submitted to finance for processing</inlineHelpText>
        <label>620 to R7 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Obligation_IA__c</fullName>
        <formula>(
  IA_Sq_Ft__c /
  IF(
    ((IA_Sq_Ft__c + NOA_Sq_Ft__c) &lt;&gt; 0),
    (IA_Sq_Ft__c + NOA_Sq_Ft__c),
    1 
  )
) 

* Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Obligation IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Obligation_NOA__c</fullName>
        <formula>If ( ((IA_Sq_Ft__c + NOA_Sq_Ft__c) = 0),
      Amount__c,
      ((NOA_Sq_Ft__c /(IA_Sq_Ft__c + NOA_Sq_Ft__c)) * Amount__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Obligation NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BDGFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check mark indicates to include in budget projections or not to include</inlineHelpText>
        <label>Include In Budget Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Exclusion_Reason__c</fullName>
        <label>Budget Exclusion Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DEC_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEC IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DEC_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEC NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EffectiveDateFY__c</fullName>
        <formula>Text(YEAR( EffectiveDate__c + 92 ))</formula>
        <label>Effective Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEB_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FEB IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FEB_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FEB NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation_IA__c</fullName>
        <label>FY Obligation IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation_NOA__c</fullName>
        <label>FY Obligation NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FY Obligation</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinanceProcessedDate__c</fullName>
        <label>Finance Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IA_Sq_Ft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsUserRegionMatch__c</fullName>
        <formula>IF(OR(RegionCD__c==$User.Glxy_Region_Code__c,$User.Glxy_Region_Code__c==&quot;CO&quot;), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUserRegionMatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAN_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JAN IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JAN_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JAN NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUL_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUL IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUL_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUL NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUN_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUN IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUN_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUN NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAR_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAR IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAR_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAR NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAY_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAY IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAY_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAY NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOA_Sq_Ft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOV_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOV IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOV_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOV NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCT_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCT IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCT_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCT NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentDescription__c</fullName>
        <inlineHelpText>Type of action associated to the Payment Type</inlineHelpText>
        <label>Payment Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broker Commission Credit</fullName>
                </value>
                <value>
                    <fullName>Buyout</fullName>
                </value>
                <value>
                    <fullName>Catch Up Payment</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Condemnation</fullName>
                </value>
                <value>
                    <fullName>Debits &amp; Credits</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overtime Services</fullName>
                </value>
                <value>
                    <fullName>Paragraph 15</fullName>
                </value>
                <value>
                    <fullName>Recovery Act</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Rent Free Period</fullName>
                </value>
                <value>
                    <fullName>Step Rent Decrease</fullName>
                </value>
                <value>
                    <fullName>Step Rent Increase</fullName>
                </value>
                <value>
                    <fullName>Suspension</fullName>
                </value>
                <value>
                    <fullName>Tax Escalation</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier from Rexus. This helps in finding the record in Rexus.</inlineHelpText>
        <label>Payment ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <description>Galaxy 1.1</description>
        <inlineHelpText>From the drop down button, choose the best &apos;combination&apos; that best fits the action you want to execute</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amortized Custom Tenant Improvements</fullName>
                </value>
                <value>
                    <fullName>Amortized General Tenant Improvements</fullName>
                </value>
                <value>
                    <fullName>Antenna</fullName>
                </value>
                <value>
                    <fullName>Boat Dock</fullName>
                </value>
                <value>
                    <fullName>Bridge</fullName>
                </value>
                <value>
                    <fullName>Building Specific Amortized Capital - Lessor</fullName>
                </value>
                <value>
                    <fullName>Joint Use</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Operating Rent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Railroad Crossing</fullName>
                </value>
                <value>
                    <fullName>Real Estate Tax</fullName>
                </value>
                <value>
                    <fullName>Shell Rent</fullName>
                </value>
                <value>
                    <fullName>Structured Parking</fullName>
                </value>
                <value>
                    <fullName>Surface Parking</fullName>
                </value>
                <value>
                    <fullName>Wareyard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessedDateFY__c</fullName>
        <formula>Text(YEAR(ProcessedDate__c + 92 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedDate__c</fullName>
        <inlineHelpText>Date transaction completed and processed</inlineHelpText>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Region value specified is outside your region</errorMessage>
            <filterItems>
                <field>$User.Glxy_Region_Code__c</field>
                <operation>equals</operation>
                <valueField>Glxy_LeaseProjects__c.RegionCd__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Glxy_Region_Code__c</field>
                <operation>equals</operation>
                <value>CO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Glxy_LeaseProjects__c</referenceTo>
        <relationshipLabel>Lease Proj Step Rents</relationshipLabel>
        <relationshipName>LP_Step_Rents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RealtySpecialist__c</fullName>
        <label>Realty Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RegionCD__c</fullName>
        <formula>TEXT(ProjectNumber__r.RegionCd__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEP_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SEP IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEP_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SEP NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamCode__c</fullName>
        <formula>ProjectNumber__r.TeamCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Code</label>
        <type>Text</type>
    </fields>
    <label>Lease Proj Step Rent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProjectNumber__c</columns>
        <columns>RegionCD__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>Amount__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>TeamCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Region_s_Lease_Proj_Step_Rents</fullName>
        <columns>NAME</columns>
        <columns>ProjectNumber__c</columns>
        <columns>RegionCD__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>Amount__c</columns>
        <columns>TeamCode__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>My Region&apos;s Lease Proj Step Rents</label>
    </listViews>
    <nameField>
        <displayFormat>LPSTP{0000000}</displayFormat>
        <label>LP Step Rent #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Proj Step Rents</pluralLabel>
    <recordTypes>
        <fullName>Placeholder</fullName>
        <active>true</active>
        <description>Used for Galaxy entered data</description>
        <label>Placeholder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rexus</fullName>
        <active>true</active>
        <description>Data imported from Rexus</description>
        <label>Rexus</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SumOfNOAandIA</fullName>
        <active>true</active>
        <description>Sum of NOA and IA Sq. Ft. cannot exceed the total square feet of the Lease Project</description>
        <errorConditionFormula>IF(AND(CONTAINS($User.FirstName, &apos;CastIron&apos;), ProjectNumber__r.SquareFeet__c  &lt;&gt; 0), (IA_Sq_Ft__c + NOA_Sq_Ft__c &gt; ProjectNumber__r.SquareFeet__c), FALSE)</errorConditionFormula>
        <errorDisplayField>NOA_Sq_Ft__c</errorDisplayField>
        <errorMessage>Sum of NOA and IA Sq. Ft. cannot exceed the total square feet of the Lease Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Budget_exclude_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>AND(BDGFlag__c =FALSE,  ISBLANK( Budget_Exclusion_Reason__c ) )</errorConditionFormula>
        <errorDisplayField>Budget_Exclusion_Reason__c</errorDisplayField>
        <errorMessage>Please provide a reason for excluding this from the budget.</errorMessage>
    </validationRules>
</CustomObject>